# sash

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  configure
examples/: simple_shell.cpp
sash/: color.hpp  command.hpp  command_line.hpp  completer.hpp  editline.hpp  libedit_backend.hpp  mode.hpp  sash.hpp  variables_engine.hpp
